There is no need to reserve that much memory upfront